--- a/Scrambled Net/.project
+++ b/Scrambled Net/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Hermit Android</name>
+			<type>2</type>
+			<location>/home/folk/clint/Desktop/Projects/Android/Hermit Android</location>
+		</link>
+	</linkedResources>
 </projectDescription>
