--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.hermit.tricorder"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionName="2.1" android:versionCode="9">
+	android:versionCode="10" android:versionName="3.0">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
-		android:icon="@drawable/tricorder" android:debuggable="true">
+		android:icon="@drawable/tricorder" android:debuggable="false">
 		
 		<activity android:name=".Tricorder"
 			android:label="@string/app_name" android:launchMode="singleTop"
