--- a/Watch Aids/AndroidManifest.xml
+++ b/Watch Aids/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="org.hermit.watchaids"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/peter_icon" android:label="@string/app_name" android:description="@string/description">
         <activity android:name=".WatchAids"
                   android:label="@string/app_name">
             <intent-filter>
