--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.hermit.tricorder"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionName="3.2" android:versionCode="12">
+	android:versionCode="13" android:versionName="3.3">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
 		android:icon="@drawable/tricorder" android:debuggable="false">
