--- a/Plughole/.classpath
+++ b/Plughole/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Hermit Library"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
