--- a/Wind Blink/AndroidManifest.xml
+++ b/Wind Blink/AndroidManifest.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.hermit.windblink"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/spectrum_icon">
-        <activity android:name=".WindBlink"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+	package="org.hermit.windblink" android:versionCode="1"
+	android:versionName="1.0">
+	
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon">
+	
+		<activity android:name=".WindBlink"
+				  android:label="@string/app_name"
+				  android:launchMode="singleTop">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 
-    </application>
-    <uses-sdk android:minSdkVersion="3" />
+		<activity android:name=".Preferences" android:label="@string/prefs_title">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+			</intent-filter>
+		</activity>
+		
+	</application>
+	
+	<uses-sdk android:minSdkVersion="3" />
 
-<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 </manifest> 
