--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.windblink" android:versionCode="1"
+	package="org.hermit.audalyzer" android:versionCode="1"
 	android:versionName="1.0">
 	
-	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon">
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
 	
-		<activity android:name=".WindBlink"
+		<activity android:name=".Audalyzer"
 				  android:label="@string/app_name"
 				  android:launchMode="singleTop">
 			<intent-filter>
