--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -8,7 +8,7 @@
 		
 		<activity android:name=".Tricorder"
 			android:label="@string/app_name" android:launchMode="singleTop"
-			android:icon="@drawable/tricorder">
+			android:icon="@drawable/tricorder" android:configChanges="">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category
