--- a/Scrambled Net/AndroidManifest.xml
+++ b/Scrambled Net/AndroidManifest.xml
@@ -43,6 +43,8 @@
         </activity>
     </application>
     
-<uses-sdk android:minSdkVersion="3"></uses-sdk>
+<uses-sdk android:minSdkVersion="4"></uses-sdk>
+<supports-screens android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true"></supports-screens>
+
 </manifest> 
 
