--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.audalyzer" android:versionCode="1"
-	android:versionName="1.0">
+	package="org.hermit.audalyzer" android:versionName="1.1" android:versionCode="2">
 	
 	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
 	
 		<activity android:name=".Audalyzer"
 				  android:label="@string/app_name"
-				  android:launchMode="singleTop">
+				  android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
