--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	android:versionName="3.7" android:versionCode="17">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
-		android:icon="@drawable/tricorder" android:debuggable="false">
+		android:icon="@drawable/tricorder" android:debuggable="true">
 		
 		<activity android:name=".Tricorder"
 			android:label="@string/app_name" android:launchMode="singleTop"
