--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -3,7 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.hermit.audalyzer" android:versionName="1.1" android:versionCode="2">
 	
-	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="true">
 	
 		<activity android:name=".Audalyzer"
 				  android:label="@string/app_name"
@@ -22,8 +22,9 @@
 		
 	</application>
 	
-	<uses-sdk android:minSdkVersion="3" />
+	<uses-sdk android:minSdkVersion="4"/>
 
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+<supports-screens android:normalScreens="true" android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:resizeable="true"></supports-screens>
 </manifest> 
