--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -27,4 +27,5 @@
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 
 <supports-screens android:normalScreens="true" android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:resizeable="true"></supports-screens>
+<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 </manifest> 
