--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.audalyzer" android:versionName="1.1" android:versionCode="2">
+	package="org.hermit.audalyzer" android:versionCode="3" android:versionName="1.2">
 	
-	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="true">
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
 	
 		<activity android:name=".Audalyzer"
 				  android:label="@string/app_name"
