--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.hermit.tricorder"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionName="3.8" android:versionCode="18">
+	android:versionCode="19" android:versionName="3.9">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
 		android:icon="@drawable/tricorder" android:debuggable="false">
@@ -41,4 +41,5 @@
 	<uses-permission android:name="android.permission.WRITE_SETTINGS"></uses-permission>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-sdk android:minSdkVersion="3"></uses-sdk>
+<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
 </manifest>
