--- a/Scrambled Net/AndroidManifest.xml
+++ b/Scrambled Net/AndroidManifest.xml
@@ -31,7 +31,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hermit.netscramble" android:versionCode="16" android:versionName="3.5">
+    package="org.hermit.netscramble" android:versionName="3.6" android:versionCode="17">
     
     <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
         <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
