--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -3,7 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.hermit.audalyzer" android:versionName="1.3" android:versionCode="4">
 	
-	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="true">
 	
 		<activity android:name=".Audalyzer"
 				  android:label="@string/app_name"
