--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	android:versionName="3.10" android:versionCode="20">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
-		android:icon="@drawable/tricorder" android:debuggable="false">
+		android:icon="@drawable/tricorder" android:debuggable="true">
 		
 		<activity android:name=".Tricorder"
 			android:label="@string/app_name" android:launchMode="singleTop"
@@ -44,4 +44,5 @@
 <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
 <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true" android:resizeable="true"></supports-screens>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
 </manifest>
