--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.hermit.tricorder"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionName="3.10" android:versionCode="20">
+	android:versionCode="21" android:versionName="4.0">
 	<application android:label="@string/app_name"
 		android:description="@string/description"
 		android:icon="@drawable/tricorder" android:debuggable="true">
