--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.hermit.tricorder"
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest package="org.hermit.tricorder" xmlns:android="http://schemas.android.com/apk/res/android"
 	android:versionCode="22" android:versionName="4.1">
 	<application android:label="@string/app_name"
-		android:description="@string/description"
-		android:icon="@drawable/tricorder" android:debuggable="false">
-		
-		<activity android:name=".Tricorder"
-			android:label="@string/app_name" android:launchMode="singleTop"
-			android:icon="@drawable/tricorder" android:configChanges="">
+		android:description="@string/description" android:icon="@drawable/tricorder"
+		android:debuggable="false">
+
+		<activity android:name=".Tricorder" android:label="@string/app_name"
+			android:launchMode="singleTop" android:icon="@drawable/tricorder"
+			android:configChanges="">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-				<category
-					android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		
-		
-		<activity android:name=".Preferences"
-			android:label="@string/prefs_title">
+
+
+		<activity android:name=".Preferences" android:label="@string/prefs_title">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 			</intent-filter>
 		</activity>
-		
+
+		<activity android:name=".Help">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+			</intent-filter>
+		</activity>
+
 	</application>
-	<uses-permission
-		android:name="android.permission.ACCESS_COARSE_LOCATION">
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION">
 	</uses-permission>
-	<uses-permission
-		android:name="android.permission.ACCESS_FINE_LOCATION">
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
 	</uses-permission>
-	<uses-permission
-		android:name="android.permission.CHANGE_WIFI_STATE">
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE">
 	</uses-permission>
-	<uses-permission
-		android:name="android.permission.ACCESS_WIFI_STATE">
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE">
 	</uses-permission>
 	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_SETTINGS"></uses-permission>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-sdk android:minSdkVersion="4"></uses-sdk>
-<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-<supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true" android:resizeable="true"></supports-screens>
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-sdk android:minSdkVersion="4"></uses-sdk>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+	<supports-screens android:largeScreens="true"
+		android:normalScreens="true" android:anyDensity="true"
+		android:smallScreens="true" android:resizeable="true"></supports-screens>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
 </manifest>
