--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.audalyzer" android:versionName="1.4" android:versionCode="5">
-	
-	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
-	
-		<activity android:name=".Audalyzer"
-				  android:label="@string/app_name"
-				  android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation">
+	package="org.hermit.audalyzer" android:versionName="1.4"
+	android:versionCode="5">
+
+	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon"
+		android:debuggable="true">
+
+		<activity android:name=".Audalyzer" android:label="@string/app_name"
+			android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -19,13 +20,20 @@
 				<action android:name="android.intent.action.MAIN" />
 			</intent-filter>
 		</activity>
-		
+
+		<activity android:name=".Help">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+			</intent-filter>
+		</activity>
 	</application>
-	
-	<uses-sdk android:minSdkVersion="4"/>
+
+	<uses-sdk android:minSdkVersion="4" />
 
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-<supports-screens android:normalScreens="true" android:smallScreens="true" android:anyDensity="true" android:largeScreens="true" android:resizeable="true"></supports-screens>
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<supports-screens android:normalScreens="true"
+		android:smallScreens="true" android:anyDensity="true"
+		android:largeScreens="true" android:resizeable="true"></supports-screens>
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 </manifest> 
