Scrambled Net: better help, added promo; bump version to 3.8.

--- a/Scrambled Net/AndroidManifest.xml
+++ b/Scrambled Net/AndroidManifest.xml
@@ -31,7 +31,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hermit.netscramble" android:versionName="3.7" android:versionCode="18">
+    package="org.hermit.netscramble" android:versionCode="19" android:versionName="3.8">
     
     <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
         <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
