--- a/Scrambled Net/AndroidManifest.xml
+++ b/Scrambled Net/AndroidManifest.xml
@@ -2,23 +2,14 @@
 
 <!-- 
  * NetScramble: unscramble a network and connect all the terminals.
- * 
- * This is an Android implementation of the KDE game "knetwalk".
  * The player is given a network diagram with the parts of the network
  * randomly rotated; he/she must rotate them to connect all the terminals
  * to the server.
  * 
- * Original author:
- *   QNetwalk, Copyright (C) 2004, Andi Peredri <andi@ukr.net>
+ * This is an Android implementation of the KDE game "knetwalk" by
+ * Andi Peredri, Thomas Nagy, and Reinhold Kainhofer.
  *
- * Ported to kde by:
- *   Thomas Nagy <tnagyemail-mail@yahoo@fr>
- *
- * Cell-locking implemented by:
- *   Reinhold Kainhofer <reinhold@kainhofer.com>
- *
- * Ported to Android by:
- *   Ian Cameron Smith <johantheghost@yahoo.com>
+ * © 2007-2010 Ian Cameron Smith <johantheghost@yahoo.com>
  *
  *   This program is free software; you can redistribute it and/or modify
  *   it under the terms of the GNU General Public License version 2
@@ -41,6 +32,12 @@
                 <category android:name="android.intent.category.PREFERENCE" />
             </intent-filter>
         </activity>
+
+		<activity android:name=".ScoreList" android:launchMode="singleTop" android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout" android:label="@string/scores_title">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+			</intent-filter>
+		</activity>
 
 		<activity android:name=".Help" android:launchMode="singleTop" android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout" android:label="@string/help_title">
 			<intent-filter>
