--- a/Audalyzer/AndroidManifest.xml
+++ b/Audalyzer/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.audalyzer" android:versionName="1.7" android:versionCode="8">
+	package="org.hermit.audalyzer" android:versionCode="9" android:versionName="1.8">
 
 	<application android:label="@string/app_name" android:icon="@drawable/spectrum_icon" android:debuggable="false">
 
