--- a/Scrambled Net Full/.project
+++ b/Scrambled Net Full/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Scrambled Net</name>
+	<name>Scrambled Net Full</name>
 	<comment></comment>
 	<projects>
 	</projects>
