--- a/Scrambled Net Full/AndroidManifest.xml
+++ b/Scrambled Net Full/AndroidManifest.xml
@@ -24,7 +24,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.hermit.netscramblefull" android:versionCode="23" android:versionName="4.0">
     
-    <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="true">
+    <application android:icon="@drawable/netscramble" android:label="@string/title" android:description="@string/description" android:debuggable="false">
         <activity android:name="NetScramble" android:label="@string/title" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
