--- a/Substrate/.classpath
+++ b/Substrate/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="Hermit Android"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Hermit Library"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
