--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0" package="org.hermit.substrate">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name=".SubstrateApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-    <uses-sdk android:minSdkVersion="7"/>
-<supports-screens></supports-screens>
-</manifest> 
+	android:versionCode="1" android:versionName="1.0" package="org.hermit.substrate">
+	
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	
+		<activity android:icon="@drawable/icon" android:label="@string/app_name" android:name=".SubstrateApp">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+
+		<service android:label="@string/wallpaper_substrate" android:name="SubstrateWallpaper"
+			android:permission="android.permission.BIND_WALLPAPER">
+			<intent-filter>
+				<action android:name="android.service.wallpaper.WallpaperService" />
+			</intent-filter>
+			<meta-data android:name="android.service.wallpaper"
+				android:resource="@xml/substrate" />
+		</service>
+
+	</application>
+	
+	<uses-sdk android:minSdkVersion="7" />
+	<supports-screens></supports-screens>
+	
+</manifest>
+
