--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -5,15 +5,18 @@
 	
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 	
-		<activity android:icon="@drawable/icon" android:label="@string/app_name" android:name=".SubstrateApp">
+		<activity android:icon="@drawable/icon"
+				android:label="@string/app_name"
+				android:name="EyeCandyApp">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
-		<service android:label="@string/wallpaper_substrate" android:name="SubstrateWallpaper"
-			android:permission="android.permission.BIND_WALLPAPER">
+		<service android:label="@string/wallpaper_substrate"
+				android:name="EyeCandyWallpaper"
+				android:permission="android.permission.BIND_WALLPAPER">
 			<intent-filter>
 				<action android:name="android.service.wallpaper.WallpaperService" />
 			</intent-filter>
