Substrate: added Guts.

--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -68,6 +68,22 @@
             android:exported="true">
         </activity>
 
+		<service android:label="@string/guts_title"
+				android:name=".hacks.GutsWallpaper"
+				android:permission="android.permission.BIND_WALLPAPER">
+			<intent-filter>
+				<action android:name="android.service.wallpaper.WallpaperService" />
+			</intent-filter>
+			<meta-data android:name="android.service.wallpaper"
+				android:resource="@xml/guts" />
+		</service>
+
+        <activity
+            android:label="@string/guts_prefs_title"
+            android:name=".hacks.GutsPreferences"
+            android:exported="true">
+        </activity>
+
 	</application>
 
 	<uses-sdk android:minSdkVersion="7" />
