--- a/Substrate/AndroidManifest.xml
+++ b/Substrate/AndroidManifest.xml
@@ -100,6 +100,22 @@
             android:exported="true">
         </activity>
 
+		<service android:label="@string/nodes_title"
+				android:name=".hacks.NodeGardenWallpaper"
+				android:permission="android.permission.BIND_WALLPAPER">
+			<intent-filter>
+				<action android:name="android.service.wallpaper.WallpaperService" />
+			</intent-filter>
+			<meta-data android:name="android.service.wallpaper"
+				android:resource="@xml/nodes" />
+		</service>
+
+        <activity
+            android:label="@string/nodes_prefs_title"
+            android:name=".hacks.NodeGardenPreferences"
+            android:exported="true">
+        </activity>
+
 	</application>
 
 	<uses-sdk android:minSdkVersion="7" />
