--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="org.hermit.tricorder" xmlns:android="http://schemas.android.com/apk/res/android"
 	android:versionCode="27" android:versionName="4.6">
 	<application android:label="@string/app_name"
-		android:description="@string/description" android:icon="@drawable/tricorder" android:debuggable="true">
+		android:description="@string/description" android:icon="@drawable/tricorder" android:debuggable="false">
 
 		<activity android:name=".Tricorder" android:label="@string/app_name"
 			android:launchMode="singleTop" android:icon="@drawable/tricorder"
