--- a/Tricorder/AndroidManifest.xml
+++ b/Tricorder/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.hermit.tricorder" xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionName="4.7" android:versionCode="28">
+	android:versionCode="29" android:versionName="5.0">
 	<application android:label="@string/app_name"
 		android:description="@string/description" android:icon="@drawable/tricorder" android:debuggable="false">
 
