--- a/TiltLander/.project
+++ b/TiltLander/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LunarLander</name>
+	<name>TiltLander</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Hermit Android</name>
+			<type>2</type>
+			<locationURI>Workspace/Hermit%20Android/lib</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
