--- a/TiltLander/AndroidManifest.xml
+++ b/TiltLander/AndroidManifest.xml
@@ -15,19 +15,34 @@
  * limitations under the License.
  -->
 
-<!-- Declare the contents of this Android application.  The namespace
-     attribute brings in the Android platform namespace, and the package
-     supplies a unique name for the application.  When writing your
-     own application, the package name must be changed from "com.example.*"
-     to come from a domain that you own or have control over. -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.hermit.tiltlander" android:versionName="1.3" android:versionCode="4">
-    <application android:icon="@drawable/app_lunar_lander" android:label="@string/app_name" android:description="@string/app_desc" android:debuggable="false">
-        <activity android:name="LunarLander" android:launchMode="standard">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	package="org.hermit.tiltlander" android:versionName="2.0"
+	android:versionCode="5">
+	
+	<application android:icon="@drawable/app_lunar_lander"
+		android:label="@string/app_name" android:description="@string/app_desc"
+		android:debuggable="false">
+
+		<activity android:name="LunarLander" android:launchMode="standard">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
 		</activity>
-    </application>
-<uses-sdk android:minSdkVersion="3"></uses-sdk>
+
+		<activity android:name=".Help" android:launchMode="singleTop"
+			android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout"
+			android:label="@string/help_title">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+			</intent-filter>
+		</activity>
+
+	</application>
+	
+	<uses-sdk android:minSdkVersion="3" />
+	<supports-screens android:anyDensity="true"
+		android:smallScreens="true" android:resizeable="true"
+		android:normalScreens="true" android:largeScreens="false" />
+
 </manifest>
