--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -7,6 +7,9 @@
 	<application android:label="@string/app_name"
 		android:description="@string/description" android:debuggable="true" android:icon="@drawable/android">
 
+        <provider android:name=".provider.PassageProvider"
+            android:authorities="org.hermit.provider.PassageData" />
+
 		<activity android:name=".OnWatch" android:label="@string/app_name"
 			android:launchMode="singleTop" android:theme="@style/OnWatchTheme">
 			<intent-filter>
