On Watch: use generic provider -- not working.

--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -22,8 +22,28 @@
 			android:label="@string/crew_edit_title">
 		</activity>
 		
-		<activity android:launchMode="singleTop" android:name="PassageEditor"
-			android:label="@string/passage_edit_title">
+        <!-- Passage editor activity. -->
+		<activity android:name="PassageEditor"
+					android:launchMode="singleTop"
+            		android:configChanges="keyboardHidden|orientation"
+					android:label="@string/passage_edit_title" >
+					
+            <!-- View or edit the data of a single passage. -->
+            <intent-filter android:label="@string/passage_edit_title">
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+                <action android:name="com.android.notepad.action.EDIT_NOTE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.hermit.org.passage.passage" />
+            </intent-filter>
+
+            <!-- Create a new note inside of a directory of passages. -->
+            <intent-filter android:label="@string/passage_new_title">
+                <action android:name="android.intent.action.INSERT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.hermit.org.passage.passage" />
+            </intent-filter>
+
 		</activity>
 
 		<activity android:name="org.hermit.android.widgets.TimeZoneActivity"
