--- a/Dazzle/AndroidManifest.xml
+++ b/Dazzle/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionCode="1"
       android:versionName="1.0">
       
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
 
         <activity android:name="DazzleControl"
                 android:label="@string/app_name"
