--- a/Test Card/AndroidManifest.xml
+++ b/Test Card/AndroidManifest.xml
@@ -30,5 +30,6 @@
     
     <uses-sdk android:minSdkVersion="4" />
 
+<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 </manifest> 
 
