--- a/Plughole/.project
+++ b/Plughole/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Hermit Android</name>
+			<type>2</type>
+			<locationURI>Workspace/Hermit%20Android/lib</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
