Plughole: project props.

--- a/Plughole/default.properties
+++ b/Plughole/default.properties
@@ -7,7 +7,7 @@
 # "build.properties", and override values to adapt the script to your
 # project structure.
 
-android.library.reference.1=../HermitAndroid/
+android.library.reference.1=../HermitAndroid
 # Project target.
 target=android-4
 apk-configurations=
