--- a/Plughole/.classpath
+++ b/Plughole/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HermitLibrary"/>
-	<classpathentry kind="src" path="HermitAndroid"/>
+	<classpathentry kind="src" path="HermitAndroid_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
