--- a/HermitAndroid/AndroidManifest.xml
+++ b/HermitAndroid/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     </application>
     
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
 
 </manifest>
 
